# wasm-bindgen

examples/synchronous-instantiation/: Cargo.toml  index.html  worker.js
examples/synchronous-instantiation/src/: lib.rs
