[package]
authors = ["The wasm-bindgen Developers"]
edition = "2021"
name = "synchronous-instantiation"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { path = "../../" }
wasm-bindgen-futures = { path = "../../crates/futures" }
lazy_static = "1.4.0"
tokio = { version = "1.29.1", features = ["sync"] }
